# SOIL

./: CMakeLists.txt
projects/VC14/: SOIL.sln  SOIL.vcxproj  SOIL.vcxproj.filters
projects/VC9/: SOIL.vcxproj  UpgradeLog.htm
projects/VC9/x64/Debug/: SOIL.idb  SOIL.lib
projects/VC9/x64/Debug/SOIL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  SOIL.lastbuildstate  lib.command.1.tlog
projects/VC9/x64/Release/: SOIL.lib
projects/VC9/x64/Release/SOIL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  SOIL.lastbuildstate  lib.command.1.tlog
src/: test_SOIL.cpp
